cluster/apps/media/plex/networkpolicies/plex.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plex
  namespace: media
spec:
  description: "Policy for plex"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: plex
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-internal
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-external
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
        - matchLabels:
            app.kubernetes.io/name: sonarr
            "k8s:io.kubernetes.pod.namespace": media
        - matchLabels:
            app.kubernetes.io/name: radarr
            "k8s:io.kubernetes.pod.namespace": media
        - matchLabels:
            app.kubernetes.io/name: tautulli
            "k8s:io.kubernetes.pod.namespace": media
        - matchLabels:
            app.kubernetes.io/name: screendeck
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
        - ports:
            - port: "443"
